Title blur只在sidebar hover 時才出現

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <aside id="sidebar">
       <div id="title">
         <img id="favicon" src="images/icons/favicon.png" />
+        <img id="favicon" src="images/icons/favicon.png" />
         <h1 lang="en">1ureka's CG</h1>
       </div>
     </aside>
